# tujing

./: .dockerignore  .gitignore  AGENTS.md  DEVELOPMENT_SPEC.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/api/config-check/: route.ts
app/api/generate/: route.ts
app/api/tasks/: route.ts
app/api/upload/: route.ts
app/generate/: page.tsx
app/result/: page.tsx
app/result/[taskId]/: page.tsx
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  orders.py  tasks.py
backend/app/services/: gemini.py  image_store.py  order_store.py  task_runner.py  task_store.py  template.py
backend/tests/: test_task_runner_scenarios.py
components/: GeneratingLoader.tsx  ImageUploader.tsx  ResultDisplay.tsx  TemplateSelector.tsx  template-options.ts
config/: ai.config.example.json
docker/: entrypoint.sh  nginx.conf
docs/: PROJECT_STANDARDS.md  plan.md
docs/archive/: DESIGN_SYSTEM_V2.md  ROADMAP.md  plan.md
docs/archive/plans/: 2026-04-06-gemini-minimal-design.md  (+1 more)
docs/plans/: 2026-04-06-gemini-minimal-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  globals.css  main.tsx
lib/: ai-config.ts  gemini.ts  task-runner.ts  task-store.ts
openspec/: README.md
scripts/: docker-redeploy.sh  docker-up.sh  migrate_json_to_sqlite.py  playwright_smoke_generate.ps1  playwright_smoke_generate.sh
(+23 files in other folders)
